--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,6 +42,22 @@ http {
     server registry:5000 max_fails=3 fail_timeout=15s;
   }
 
+  upstream sonarqube {
+    least_conn;
+    server sonarqube:9000 max_fails=3 fail_timeout=15s;
+  }
+
+  upstream jenkins {
+   least_conn;
+   server jenkins:8080 max_fails=3 fail_timeout=15s;
+  }
+
+  server {
+      listen 80;
+      server_name pica.cps.unizar.es;
+      return 301 https://$host$request_uri;
+  }
+
   server {
     listen 443 ssl http2;
     server_name pica.cps.unizar.es;
@@ -119,11 +135,11 @@ http {
     # Add header for IE in compatibility mode.
     add_header X-UA-Compatible "IE=edge";
 
-	# Redirect (most) requests to /v2/* to the Docker Registry
-	location /v2/ {
-	  # Do not allow connections from docker 1.5 and earlier
-	  # docker pre-1.6.0 did not properly set the user agent on ping, catch "Go *" user agents
-	  if ($http_user_agent ~ "^(docker\/1\.(3|4|5(?!\.[0-9]-dev))|Go ).*$" ) {
+  	# Redirect (most) requests to /v2/* to the Docker Registry
+  	location /v2/ {
+  	  # Do not allow connections from docker 1.5 and earlier
+  	  # docker pre-1.6.0 did not properly set the user agent on ping, catch "Go *" user agents
+  	  if ($http_user_agent ~ "^(docker\/1\.(3|4|5(?!\.[0-9]-dev))|Go ).*$" ) {
         return 404;
       }
 
@@ -138,10 +154,10 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 900;
       proxy_buffering on;
-	}
+	  }
 
-	# Portus needs to handle /v2/token for authentication
-	location = /v2/token {
+  	# Portus needs to handle /v2/token for authentication
+  	location = /v2/token {
       proxy_pass https://portus;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
@@ -151,8 +167,8 @@ http {
       proxy_buffering on;
     }
 
-	# Portus needs to handle /v2/webhooks/events for notifications
-	location = /v2/webhooks/events {
+  	# Portus needs to handle /v2/webhooks/events for notifications
+  	location = /v2/webhooks/events {
       proxy_pass https://portus;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
@@ -173,8 +189,30 @@ http {
       break;
     }
 
-	# Portus handles everything else for the UI
-	location / {
+    # Jenkins location
+  	location /jenkins {
+      proxy_set_header        Host $host:$server_port;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Forwarded-Proto $scheme;
+
+      proxy_redirect http:// https://;
+      proxy_pass              http://jenkins;
+    }
+
+    # Sonarqube
+  	location /sonar {
+      proxy_set_header        Host $host:$server_port;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Forwarded-Proto $scheme;
+
+      proxy_redirect http:// https://;
+      proxy_pass              http://sonarqube;
+    }
+
+  	# Portus handles everything else for the UI
+  	location / {
       try_files $uri/index.html $uri.html $uri @portus;
     }
 
