--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -54,13 +54,13 @@ http {
 
   server {
       listen 80;
-      server_name pica.cps.unizar.es;
+      server_name $MACHINE_FQDN;
       return 301 https://$host$request_uri;
   }
 
   server {
     listen 443 ssl http2;
-    server_name pica.cps.unizar.es;
+    server_name $MACHINE_FQDN;
     root /srv/Portus/public;
 
     ##
