Add privileged to jenkins

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,7 @@ services:
   jenkins:
     image: jenkins/jenkins
     restart: always
+    privileged: "true"
     environment:
       JENKINS_OPTS: --prefix=/jenkins
     volumes:
