--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,16 +42,6 @@ http {
     server registry:5000 max_fails=3 fail_timeout=15s;
   }
 
-  upstream sonarqube {
-    least_conn;
-    server sonarqube:9000 max_fails=3 fail_timeout=15s;
-  }
-
-  upstream jenkins {
-   least_conn;
-   server jenkins:8080 max_fails=3 fail_timeout=15s;
-  }
-
   server {
       listen 80;
       server_name $MACHINE_FQDN;
@@ -147,83 +137,41 @@ http {
       ## See the map directive above where this variable is defined.
       add_header 'Docker-Distribution-Api-Version' $docker_distribution_api_version always;
 
-      proxy_pass https://registry;
+      proxy_pass https://registry/v2/;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 900;
-      proxy_buffering on;
 	  }
 
   	# Portus needs to handle /v2/token for authentication
   	location = /v2/token {
-      proxy_pass https://portus;
+      proxy_pass https://portus/v2/token;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 900;
-      proxy_buffering on;
     }
 
   	# Portus needs to handle /v2/webhooks/events for notifications
   	location = /v2/webhooks/events {
-      proxy_pass https://portus;
+      proxy_pass https://portus/v2/webhooks/events;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 900;
-      proxy_buffering on;
     }
 
-    # Assets are mapped inside of /srv/Portus/public from a shared volume.
-    location ~ ^/(assets)/ {
-      access_log  off;
-      gzip_static on;
-      expires     max;
-      add_header  Cache-Control public;
-      add_header  Last-Modified "";
-      add_header  ETag "";
-      break;
-    }
-
-    # Jenkins location
-  	location /jenkins {
-      proxy_set_header        Host $host:$server_port;
-      proxy_set_header        X-Real-IP $remote_addr;
-      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header        X-Forwarded-Proto $scheme;
-
-      proxy_redirect http:// https://;
-      proxy_pass              http://jenkins;
-    }
-
-    # Sonarqube
-  	location /sonar {
-      proxy_set_header        Host $host:$server_port;
-      proxy_set_header        X-Real-IP $remote_addr;
-      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header        X-Forwarded-Proto $scheme;
-
-      proxy_redirect http:// https://;
-      proxy_pass              http://sonarqube;
-    }
-
-  	# Portus handles everything else for the UI
-  	location / {
-      try_files $uri/index.html $uri.html $uri @portus;
-    }
-
-    location @portus {
-      proxy_pass https://portus;
+    location /portus/ {
+      proxy_pass https://portus/;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 900;
-      proxy_buffering on;
     }
   }
 }
