--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -105,7 +105,8 @@ http {
     #
     # [1] https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
     # [2] https://en.wikipedia.org/wiki/SSL_stripping#SSL_stripping
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
+    # TODO: Disable this when Full SSL is done
+    # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
 
     # Don't allow the browser to render the page inside a frame or iframe
     # and avoid Clickjacking. More in the following link:
@@ -147,7 +148,7 @@ http {
 
   	# Portus needs to handle /v2/token for authentication
   	location = /v2/token {
-      proxy_pass https://portus/v2/token;
+      proxy_pass https://portus/portus/v2/token;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -157,7 +158,7 @@ http {
 
   	# Portus needs to handle /v2/webhooks/events for notifications
   	location = /v2/webhooks/events {
-      proxy_pass https://portus/v2/webhooks/events;
+      proxy_pass https://portus/portus/v2/webhooks/events;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -166,7 +167,7 @@ http {
     }
 
     location /portus/ {
-      proxy_pass https://portus/;
+      proxy_pass https://portus;
       proxy_set_header Host $http_host;   # required for docker client's sake
       proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
